--- a/login.html
+++ b/login.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/style/login.css">
+        <link rel="icon" href="https://th.bing.com/th/id/R.8bd3794a51699dc0618a2ba443a218b0?rik=zn1olO3TdD1o5A&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_202755.png&ehk=B8w%2fH08tqTz7rqR%2fmRJy9eFgY%2bmbBT0iMzvlbdLSo%2bE%3d&risl=&pid=ImgRaw&r=0">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
