--- a/moviedetail.html
+++ b/moviedetail.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Search Details</title>
+        <link rel="icon" href="https://www.dlf.pt/dfpng/middlepng/410-4103916_movies-vector-film-reel-movie-icon-black-and.png">
     <link rel="stylesheet" href="/style/moviedetail.css">
 </head>
 <body>
