--- a/Signup.html
+++ b/Signup.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Signup</title>
     <link rel="stylesheet" href="/style/Signup.css">
+        <link rel="icon" href="https://cdn1.iconfinder.com/data/icons/users-vol-2/32/user-man-enter-login-signup-512.png">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
