--- a/search.html
+++ b/search.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Search Your Favorite Movie</title>
+        <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/movie-20/24/film-clip-movie-search-512.png">
     <link rel="stylesheet" href="/style/search.css">
 </head>
 <body>
