project files updatation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <div id="slide"> 
-    <img src="Slide1.png" alt="">
+    <img src="https://drive.google.com/uc?export=view&id=1IB28XPHnwkDDFxVL6oZPKk41ITDlpZIA" alt="">
 </div>
 
 
