--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
 
 <div id="navsearch"></div>
 
-<div id="slide"><img src="Slide1.png" alt=""></div>
+<div id="slide"><img src="https://drive.google.com/uc?export=view&id=1IB28XPHnwkDDFxVL6oZPKk41ITDlpZIA" alt=""></div>
 
 <div id="searchbox">
     <input id="search" type="text" placeholder="Search Movies">
