--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie App</title>
+    <title>Home</title>
     <link rel="icon" href="https://static.digit.in/default/71e0c2ec83bdaf41546e982bf75c802d7a070d11.jpeg">
     <link rel="stylesheet" href="style/index.css">
     <script src="https://kit.fontawesome.com/4bea23e3dd.js" crossorigin="anonymous"></script>
